# biocre

./: README.md  pyproject.toml  tutorial_pbmc.ipynb
biocre/: __init__.py  model.py  read.py
biocre.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
